@@ -1068,6 +1068,7 @@ SC_MINOR_BBQ		466
 SC_SIROMA_ICE_TEA	467
 SC_DROCERA_HERB_STEAMED	468
 SC_PUTTI_TAILS_NOODLES	469
+SC_PRESTIGE	470
 
 e_gasp	0
 e_what	1
