@@ -1407,10 +1407,14 @@
 2515,2000,500,0,0,60000:90000:120000:150000:180000,0
 
 //==== Royal Guard skills ==================
+//-- LG_SHIELDPRESS
+2310,0,0,1000,0,70000,0
 //-- LG_REFLECTDAMAGE
 2311,0,2000,0,0,300000,0
 //-- LG_FORCEOFVANGUARD
 2313,0,0,0,0,120000,0
+//-- LG_PRESTIGE
+2318,3000,0,60000,0,30000:45000:60000:75000:90000,0
 //-- LG_PIETY
 2322,4000:3500:3000:2500:2000,0,0,0,60000:80000:100000:120000:140000,0
 
